added flyer to info page

--- a/files/info.textile
+++ b/files/info.textile
@@ -8,6 +8,8 @@ Wenn Du Lust hast, einfach mal vorbeizukommen und Dich auszuprobieren, melde Dic
 
 Übrigens: Zu den Pleiszegeiern gehören Männer und Frauen. Weiblich zu sein, ist also kein Grund, nicht einmal vorbeizuschauen!
 
+!{margin-left:60px;}http://www.skaterhockey-leipzig.de/images/skaterhockey/aushang.png!
+
 h2. BISHL
 
 Interessierte am Ligenbetrieb der Verbandsliga Berlin müssen Vereinsmitglied der Interessengemeinschaft Eishockey Leipzig e.V. sein.
